fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -91,12 +91,13 @@ table {
 .flex-nav-2{
     display: flex;
     height: 48px;
-    margin: 0;
-    border: 0;
-    padding: 0;
-    align-content: center;
+    align-items: center;
     justify-content: space-between;
-    background: white;
+    background: #fff;
+    position: sticky;
+    z-index: 99;
+    width: 100%;
+    top: 0;
 }
 
 .flex-nav-2 .left-nav{
@@ -162,7 +163,7 @@ i:hover{
     }
 }
 
-@media only screen and (max-width: 1380px){
+@media only screen and (max-width: 1280px){
     .flex-nav, .flex-nav-2 .left-nav, .flex-nav-2 .right-nav .material-icons{
         display: none;
     }
@@ -181,8 +182,8 @@ i:hover{
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-gap: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
+    width: calc(100% - 20px);
+    margin: 0 auto;
     height: auto;
 }
 
@@ -342,6 +343,7 @@ body h3:hover{
     grid-template-columns: 3fr 12fr 3fr;
     margin: 10px auto;
     height: auto;
+    width: auto;
 }
 
 .latest-news-container section{
@@ -422,6 +424,7 @@ body h3:hover{
         margin-top: 100px;
         width: 100%;
         margin-left: 10px;
+        width: calc(100% - 10px);
     }
 
     .latest-news-container .news img{
@@ -462,8 +465,8 @@ body h3:hover{
         grid-column: 2 / -2;
         position: absolute;
         margin-top: 100px;
-        width: 100%;
         margin-left: 10px;
+        width: calc(100% - 10px);
     }
 
     .latest-news-container .news img{
@@ -473,10 +476,11 @@ body h3:hover{
     }
 
     .latest-news-container .news h4{
-        font-size: 15px;
+        font-size: 13px;
         word-spacing: 0.0007em;
         margin-left: 90px;
-        line-height: 20px;
+        width: calc(100% - 90px);
+        line-height: 17px;
     }
 
     .latest-news-container .news .author{
